--- a/borrower-micro-service/pom.xml
+++ b/borrower-micro-service/pom.xml
@@ -59,6 +59,10 @@
         <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
         <version>2.0.1.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
         <!--<dependency>-->
             <!--<groupId>io.springfox</groupId>-->
             <!--<artifactId>springfox-swagger2</artifactId>-->
